<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodDetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="18dp">

        <ImageView
            android:id="@+id/iv_item_photo"
            android:layout_width="360dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_item_name"
                style="@style/TextContent.Title"
                tools:text="@string/food_name" />

            <Button
                android:id="@+id/btn_share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_baseline_share_24"
                android:textColor="@color/black" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_item_country"
            style="@style/TextContent.Subtitle"
            tools:text="@string/food_country" />

        <TextView
            android:id="@+id/tv_item_detail"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            tools:text="@string/food_detail" />

        <TextView

            style="@style/TextContent.TitleH2"
            android:text="@string/food_tools" />

        <TextView
            android:id="@+id/tv_item_tools"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            tools:text="@string/food_tools" />

        <TextView
            style="@style/TextContent.TitleH2"
            android:text="@string/food_recipe" />

        <TextView
            android:id="@+id/tv_item_recipe"
            style="@style/TextContent"
            android:layout_marginBottom="16dp"
            tools:text="@string/food_recipe" />
    </LinearLayout>


</ScrollView>