<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_item_photo"
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/round_outline"
        tools:ignore="RtlCompat"
        android:scaleType="fitXY"
        android:adjustViewBounds="true"
        tools:src="@tools:sample/avatars" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_marginBottom="8dp"
            style="@style/TextContent.Title"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/tv_item_country"
            style="@style/TextContent.Subtitle"
            android:layout_marginBottom="8dp"
            tools:text="@string/food_country" />

        <TextView
            android:id="@+id/tv_item_detail"
            style="@style/TextContent"
            android:ellipsize="end"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:maxLines="4"
            tools:text="@string/food_detail" />

    </LinearLayout>

</LinearLayout>